@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2013-06-21 Blaine Bell <blaine.bell@schrodinger.com>
+
+	* fixed selection indicators
+
 2013-06-18 Blaine Bell, Thomas Holder
 
 	* fixed loading in bg_rgb settings from old project pse files
